# livraison-vehicules-energie

./: README.md  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
Examples/: classes.py  control_flow.py  exceptions.py  file_tools.py  functions.py  hello_word.py  python_getting_started.md
Scripts/: activate  activate.bat  activate.fish  activate.nu
display/: _matching_server.js
display/scripts/: display_tours.js  remote_server.js  topology.js
docs/: explanations.md
examples/: data_struct.py  rand.py
outputs/demo/: lyon_100_1_1__insert__d_bs.txt  lyon_100_1_1__insert__d_fs.txt  lyon_100_1_1__insert__nd_bs.txt  lyon_100_1_1__insert__nd_fs.txt  lyon_100_1_1__swap__d_bs.txt  lyon_100_1_1__swap__d_fs.txt  lyon_100_1_1__swap__nd_bs.txt  lyon_100_1_1__swap__nd_fs.txt  lyon_100_1_1__triplet_shift__d_bs.txt  lyon_100_1_1__triplet_shift__d_fs.txt  lyon_100_1_1__triplet_shift__nd_bs.txt  lyon_100_1_1__triplet_shift__nd_fs.txt  lyon_100_1_2__insert__d_bs.txt  lyon_100_1_2__insert__d_fs.txt  lyon_100_1_2__insert__nd_bs.txt  lyon_100_1_2__insert__nd_fs.txt  lyon_100_1_2__swap__d_bs.txt  lyon_100_1_2__swap__d_fs.txt  lyon_100_1_2__swap__nd_bs.txt  lyon_100_1_2__swap__nd_fs.txt  lyon_100_1_2__triplet_shift__d_bs.txt  lyon_100_1_2__triplet_shift__d_fs.txt  lyon_100_1_2__triplet_shift__nd_bs.txt  lyon_100_1_2__triplet_shift__nd_fs.txt
scripts/: generate_output.sh  process_vehicle_data.sh
src/: __init__.py  __sandbox__.py  environment.py
src/models/: visit.py  (+9 more)
tests/: test_insert_heuristic.py  test_swap_heuristic.py  test_triplet_shift_heuristic.py  test_vehicle.py
(+46 files in other folders)
