[tool.poetry]
name = "livraison-vehicules-energie"
version = "0.1.0"
description = ""
authors = [
    "Alexis Yvon <alexis.yvon@gmail.com>",
    "Hedi Turki Sanekli <hedi.turki.sanekli@gmail.com>"
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
configparser = "^5.3.0"
click = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
